# docs/custom-api-spec.yaml
@@ -387,7 +387,7 @@ paths:
           schema:
             type: object
             properties:
-              new_user_role:
+              role:
                 type: string
                 description: user form role - "admin" , "write" , "read"
     delete:
@@ -408,15 +408,6 @@ paths:
           required: true
           type: integer
           description: "A valid user id"
-        - name: body
-          in: body
-          required: true
-          schema:
-            type: object
-            properties:
-              role:
-                type: string
-                description: user form role - "admin" , "write" , "read"
 
     patch:
       security:
@@ -442,9 +433,6 @@ paths:
           schema:
             type: object
             properties:
-              edit_role:
-                type: string
-                description: The current form role of user  - "admin" , "write" , "read"
               role:
                 type: string
                 description: The desired form role of user - "admin" , "write" , "read"
